--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
   <link rel="stylesheet" href="Styles/styles.css">
   </head>
 
-<body>
+<body style = "background-image: url('images/pattern-background-desktop.svg');">
   <center>
   <div class="all">
   <div class="pic">
+    <img class="pic" src="images/illustration-hero.svg" alt="" />
   </div>
     <div class="box1">
 
