--- a/index.html
+++ b/index.html
@@ -8,21 +8,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-      position: relative;
-      margin: 100px;
-      bottom: 0;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
   <link rel="stylesheet" href="Styles/styles.css">
   </head>
 
@@ -67,7 +52,7 @@
 </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#https://www.frontendmentor.io/profile/aryansatya">Aryan Satya</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/aryansatya">Aryan Satya</a>.
 
     </center>
 </body>
